# ngraph

./: CMakeLists.txt  CODEOWNERS  README.md
cmake/: external_mlir.cmake
contrib/docker/: Makefile
doc/sphinx/source/: buildlb.rst  index.rst  sitemap.rst
doc/tutorials/: onnx-tutorial.rst  sitemap.rst  tensorflow-tutorial.rst
doc/tutorials/acronyms/: index.rst
src/: CMakeLists.txt
src/contrib/mlir/: CMakeLists.txt
src/contrib/mlir/compiler/: CMakeLists.txt  compiler.cpp  lowerer.cpp  lowerer.hpp
src/contrib/mlir/tools/ngraph-opt/: CMakeLists.txt  ngraph_opt.cpp
src/ngraph/: CMakeLists.txt  binding.cpp  binding.hpp  code_writer.hpp  distributed.hpp  function.cpp  function.hpp  graph_util.cpp  graph_util.hpp  ngraph.hpp  node.cpp  node.hpp  node_validator_default.cpp  node_validator_default.hpp  node_validator_interface.hpp  serializer.cpp  serializer_stub.cpp  util.cpp
src/ngraph/builder/: norm.cpp  norm.hpp  quantization.cpp  quantization.hpp  reshape.cpp  reshape.hpp  split.cpp  split.hpp
src/ngraph/codegen/: CMakeLists.txt
src/ngraph/descriptor/: input.cpp  input.hpp  output.cpp  output.hpp  tensor.cpp
src/tools/: CMakeLists.txt
test/: CMakeLists.txt  backend_test.in.cpp  builder_quantization.cpp  cpu_fusion.cpp  hybrid_backend.cpp  onnx_import.in.cpp  serialize.cpp  tensor.cpp
test/backend/: all.in.cpp  batch_norm.in.cpp  fused_op.in.cpp
test/lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/onnx/: onnx_import.in.cpp
test/ref_generators/: generate_convolution_ref.py
test/util/: mean_squared_error.hpp  test_tools.hpp
(+117 files in other folders)
